<resources>

    <string name="app_name">SimpleCalculator</string>
    <string name="main_activity_title">SimpleCalculator</string>
    
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiple">*</string>
    <string name="divide">/</string>
    <string name="empty">清空</string>
    <string name="del">C</string>
    <string name="left_parenthese">(</string>
    <string name="right_parenthese">)</string>
    <string name="point">.</string>
    <string name="equal">=</string>

</resources>
